# nonebot_plugin_songpicker2

./: .gitignore  README.md  publish.sh  pyproject.toml  setup.py
nonebot_plugin_songpicker2/: __init__.py  config.py  data_source.py
