[tool.poetry]
name = "nonebot_plugin_songpicker2"
version = "0.1.5"
description = ""
authors = ["Maximilian Wu <me@maxng.cc>"]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0-beta.1"
build = "^0.1.0"
twine = "^3.3.0"
httpx = "^0.21.3"
nonebot-adapter-onebot = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
commitizen = "^2.20.4"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
