[tool.poetry]
name = "nonebot_plugin_songpicker2"
version = "0.1.6"
description = ""
authors = ["Maximilian Wu <me@maxng.cc>"]

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"
build = "^0.1.0"
twine = "^3.3.0"
httpx = "^0.21.3"
nonebot-adapter-onebot = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
