[tool.poetry]
name = "nonebot_plugin_songpicker2"
version = "0.2.0"
description = "点播歌曲，支持候选菜单、热评显示，数据源为网易云"
authors = ["Maximilian Wu <me@maxng.cc>"]
repository = "https://github.com/maxesisn/nonebot_plugin_songpicker2"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0-beta.1"
build = "^0.1.0"
twine = "^3.3.0"
httpx = "^0.21.3"
nonebot-adapter-onebot = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
